--- a/old.html
+++ b/old.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/Taco fixer.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +9,11 @@
 <body>
     <h1>First Experiment</h1> 
     <h2>Readme first</h2>  
-    <h3 class="title" id="Item1">First thing first...</h3> 
+    <h3>First thing first...</h3> 
     <h4>Secondly...</h4>
-    <p class="title">Running my first test on web development</p>
-    <p class="school1">For more info, please refer to <a href="https://info.techup.today" target="_blank">Techup Run 3</a></p>
+    <p>Running my first test on web development</p>
+    <p>For more info, please refer to <a href="https://info.techup.today" target="_blank">Techup Run 3</a></p>
 </body>
 </html>
-
 
 
