--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <h1>First Experiment</h1> 
     <h2>Readme first</h2>  
-    <h3 class="title" id="Item1">First thing first...</h3> 
+    <h3 class="title" id="item1">First thing first...</h3> 
     <h4>Secondly...</h4>
-    <p class="title">Running my first test on web development</p>
+    <p class="title" href="www.google.com">Running my first test on web development</p>
     <p class="school1">For more info, please refer to <a href="https://info.techup.today" target="_blank">Techup Run 3</a></p>
+<button class="buttonlast">Good Bye</button>
 </body>
 </html>
 
